# FromScratchQuant

./: .gitignore  README.md  pyproject.toml
docs/: quickstart.md  theory.md
quantlib/: __init__.py  _version.py
quantlib/benchmarks/: __init__.py  accuracy.py  profiler.py
quantlib/calibration/: __init__.py  calibrator.py  methods.py  sensitivity.py
quantlib/core/: __init__.py  dtypes.py  exceptions.py  observer.py  qparams.py
quantlib/modules/: __init__.py  qembedding.py  qlinear.py  wrappers.py
quantlib/quantizers/: __init__.py  base.py  fp4.py  int8.py  utils.py
quantlib/serialization/: __init__.py  checkpoint.py
tests/: conftest.py
tests/benchmarks/: bench_throughput.py
tests/integration/: test_end_to_end.py
tests/unit/: test_calibration.py  test_dtypes.py  test_fp4.py  test_int8.py  test_nf4.py  test_observer.py  test_qlinear.py  test_qparams.py  test_serialization.py
